--- a/css/style.css
+++ b/css/style.css
@@ -6,23 +6,158 @@ body {
 a {
 	text-decoration: none;
 }
-.sub-menu a {
-	font-family:			"RobotoRegular", Arial;
-	font-size:				14px;
-	color:					#323232;
-	text-decoration:		none;
-}
 .main-menu ul {
-	list-style:				none;
+	margin:				0;
+	padding: 			0;
+	list-style:			none;
 }
-.main-menu a {
-	color:					white;
+.main-menu a,
+.main-menu li:first-child {
+	font-size: 		16px;
+	line-height: 	18px;
+	font-weight: 	700;	/*bold=700, medium=500, regular=400 */
+	color:			white;	
+}
+.sub-menu a:hover {
+  background-color: 	#fbded7;
+}
+.sub-menu a:active {
+  background-color: 	#f6b5a5;
+}
+.user-block a {
+	font-size: 		14px;
+	line-height: 	16px;
+	font-weight: 	500;
+	color:			white;		
+}
+.user-block p {
+	font-size: 		14px;
+	line-height: 	16px;
+	font-weight: 	700;
+}
+.user-block .phone { 
+	font-size: 		22px;
+	line-height: 	24px;
+	font-weight: 	700;
+}
+.breadcrumbs {
+	margin:			0;
+	padding:		0;
+	list-style:		none;
+}
+.breadcrumbs a,
+.breadcrumbs li:last-child {
+	font-size: 		14px;
+	line-height: 	16px;
+	font-weight: 	400;
+	color:			white;
+}
+
+.basket-link  {  /*не работает*/
+	font-size:			14px;
+	line-height:		16px;
+	font-weight:		500;
+	background-color:	white;
+	color:				#323232;
+}
+
+.sel-raspberry p:first-child,
+.sel-chocolate p:first-child  {
+	font-size: 		35px;
+	line-height: 	41px;
+	font-weight: 	700;	
+}
+.sel-raspberry p:nth-child(2),
+.sel-chocolate p:nth-child(2)  {
+	font-size: 		18px;
+	line-height: 	22px;
+	font-weight: 	700;
+}
+.sel-raspberry a,
+.sel-chocolate a  {
+	font-size: 			18px;
+	line-height: 		22px;
+	font-weight: 		700;
+	background-color:	#f06542;
+	color:				white;
+}
+.price h2 {
+	color:				white;
+}
+.price-goods {
+	font-size: 			45px;
+	line-height: 		45px;
+	font-weight: 		700;
+	color:				white;
+}
+.price a {
+	background-color:	#e84d37;
+	color:				white;
 }
 
 
-
-.main-menu a:hover,
-.main-menu a:focus  {
-  background-color: 		fbded7;
+.features-block {
+	background-color:	#ede3ca; /*временно так..*/
+}
+.features-block p:first-child {
+	font-size: 			24px;
+	line-height: 		30px;
+	font-weight: 		500;
+	color:				#323232;
+}
+.features-block ul {
+	margin:				0;
+	padding:			0;
+	font-size: 			16px;
+	line-height: 		22px;
+	font-weight: 		500;
+	color:				#323232;
+	list-style:			none;
+}
+.blog p {
+	font-size: 			16px;
+	line-height: 		22px;
+	font-weight: 		500;
+	color:				#323232;
+}
+.blog a {
+	font-size: 			24px;
+	line-height: 		30px;
+	font-weight: 		700;
+	color:				#323232;
+	text-decoration: 	underline;
+}
+.subscribe p {
+	font-size: 			16px;
+	line-height: 		22px;
+	font-weight: 		400;
+	color:				#5a5a5a;
+}
+.subscribe button {
+	font-size: 			18px;
+	line-height: 		24px;
+	font-weight: 		700;
+	background-color:	#f06441;
+	color:				white;
+	border:				0;
+}
+.footer-social ul,
+.footer-info ul   {
+	margin:				0;
+	padding:			0;
+	list-style:			none;
+}
+.footer-info a {
+	font-size: 			13px;
+	line-height: 		18px;
+	font-weight: 		700;
+	color:				white;
+}
+.copyright,
+.copyright a {
+	font-size: 			12px;
+	line-height: 		18px;
+	font-weight: 		400;
+	color:				white;
 }
 
