--- a/css/style.css
+++ b/css/style.css
@@ -185,15 +185,16 @@ a {
 	/*  сетки  */
 
 html {
-  box-sizing: border-box;
+  box-sizing: 		border-box;
 }
 
 *, *::before, *::after {
-  box-sizing: inherit;
+  box-sizing: 		inherit;
 }
 
 .main-header {
 	display: 		flex;
+	align-items: 	center;
 }
 .container {
 	width:	 		1200px;
@@ -205,21 +206,59 @@ html {
 	width:				160px;
 								background-color: rgba(173, 81, 81, 0.3);
 }						/* подсветка временно, если все верно, сразу уберу! */
-.main-menu {
-	width:				400px;
+.main-menu ul {
+	display: 			flex;
+	flex-direction: 	row;
+	justify-content: 	space-around;
 								background-color: rgba(173, 115, 81, 0.3);
 }
-
+.main-menu ul li {
+	margin: 			0 20px;
+}
 
 .user-block {
+	display: 			flex;
+	flex-direction: 	column;
+
 	width:				270px;
 	margin-left:		auto;
 								background-color: rgba(173, 145, 81, 0.3);
 } 
+.user-authorization {
+	display: 			flex;
+	flex-direction: 	row;
+}
+.user-info {
+	display: 			flex;
+	flex-direction: 	column;
+}
+
+
 .features-block	{
 	display:			flex;
+	flex-direction: 	row;
+	flex-wrap:			wrap;
 	margin-bottom:		40px;
-}	
+}
+.features-block .part {
+	display:			flex;
+	flex-direction: 	row;
+	flex-wrap:			wrap;
+    justify-content: 	space-around;
+}
+.part li:nth-child(1) {
+	align-self: 		flex-start;
+	width:				50%;
+}
+.part li:nth-child(2) {
+	align-self: 		flex-end;
+	width:				50%;
+}
+.part li:nth-child(2),
+.part li:nth-child(3) {
+	margin-bottom:		10px;
+}
+
 
 .user-blog {
 	display:			flex;
@@ -247,22 +286,45 @@ html {
 	width:				267px;
 	text-align: 		center;
 								background-color: rgba(173, 200, 81, 0.3);
-}								
+}
+.pagination-list {
+	display:			flex;
+	flex-direction:		row;
+	list-style:			none;
+}
 	
 footer {
 	display:			flex;
 	margin-top:			10px;
-}
- 
-.footer-social {
+} 
+.footer-social ul {
+	display:			flex;
+	flex-direction:		row;
+	flex-wrap: 			nowrap;
 	width:				265px;
 	margin-right:		130px;
 								background-color: rgba(173, 81, 81, 0.3);
 }
-.footer-info {
+.footer-social li {
+	margin-right:		10px;
+}
+.footer-info ul {
+	display:			flex;
+	flex-direction:		row;
+	flex-wrap: 			wrap;
 	width:				400px;
 	margin-right:		150px;
 								background-color: rgba(173, 115, 81, 0.3);
+}
+.info-part li:nth-child(1),
+.info-part li:nth-child(3) {
+	align-self: 		flex-start;
+	width:				50%;
+}
+.info-part li:nth-child(2),
+.info-part li:nth-child(4) {
+	align-self: 		flex-end;
+	width:				50%;
 }
 .footer-logo {
 	width:				265px;
