--- a/css/style.css
+++ b/css/style.css
@@ -197,7 +197,7 @@ html {
 	align-items: 	center;
 }
 .container {
-	width:	 		1200px;
+	width:	 		1200px; /* 1146px */
 	margin: 		0 auto;
 	padding:		0 27px;
 }
@@ -208,58 +208,28 @@ html {
 }						/* подсветка временно, если все верно, сразу уберу! */
 .main-menu ul {
 	display: 			flex;
-	flex-direction: 	row;
 	justify-content: 	space-around;
 								background-color: rgba(173, 115, 81, 0.3);
 }
-.main-menu ul li {
+.main-menu li {
 	margin: 			0 20px;
 }
-
 .user-block {
-	display: 			flex;
-	flex-direction: 	column;
-
 	width:				270px;
 	margin-left:		auto;
 								background-color: rgba(173, 145, 81, 0.3);
 } 
-.user-authorization {
-	display: 			flex;
-	flex-direction: 	row;
-}
-.user-info {
-	display: 			flex;
-	flex-direction: 	column;
-}
-
-
 .features-block	{
-	display:			flex;
-	flex-direction: 	row;
-	flex-wrap:			wrap;
 	margin-bottom:		40px;
 }
-.features-block .part {
-	display:			flex;
-	flex-direction: 	row;
-	flex-wrap:			wrap;
-    justify-content: 	space-around;
+.features-list {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
-.part li:nth-child(1) {
-	align-self: 		flex-start;
-	width:				50%;
+.features-list li {
+  width: 49%;
 }
-.part li:nth-child(2) {
-	align-self: 		flex-end;
-	width:				50%;
-}
-.part li:nth-child(2),
-.part li:nth-child(3) {
-	margin-bottom:		10px;
-}
-
-
 .user-blog {
 	display:			flex;
 	justify-content:	space-between;
@@ -289,7 +259,6 @@ html {
 }
 .pagination-list {
 	display:			flex;
-	flex-direction:		row;
 	list-style:			none;
 }
 	
@@ -299,18 +268,15 @@ footer {
 } 
 .footer-social ul {
 	display:			flex;
-	flex-direction:		row;
-	flex-wrap: 			nowrap;
 	width:				265px;
 	margin-right:		130px;
 								background-color: rgba(173, 81, 81, 0.3);
 }
-.footer-social li {
-	margin-right:		10px;
+.footer-social li:not(:last-child) { 
+	margin-right: 		10px; 
 }
 .footer-info ul {
 	display:			flex;
-	flex-direction:		row;
 	flex-wrap: 			wrap;
 	width:				400px;
 	margin-right:		150px;
@@ -318,12 +284,10 @@ footer {
 }
 .info-part li:nth-child(1),
 .info-part li:nth-child(3) {
-	align-self: 		flex-start;
 	width:				50%;
 }
 .info-part li:nth-child(2),
 .info-part li:nth-child(4) {
-	align-self: 		flex-end;
 	width:				50%;
 }
 .footer-logo {
