--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,24 @@ body {
 a {
 	text-decoration: 	none;
 }
+img {
+	max-width: 			100%;
+	height: 			auto;
+}
 .main-menu ul {
 	margin:				0;
 	padding: 			0;
 	list-style:			none;
 }
+.main-menu a {
+	display:			block;
+	vertical-align:		baseline;
+	
+	list-style:	#adc4b7;			/* hover */
+	padding:			7px 11px;
+}
+
+
 .main-menu a,
 .main-menu li:first-child {
 	font-size: 			16px;
