--- a/css/style.css
+++ b/css/style.css
@@ -14,8 +14,6 @@ img {
     position: relative; 
 }
 
-
-
 .main-menu ul {
 	margin:				0;
 	padding: 			0;
@@ -29,8 +27,6 @@ img {
 	text-decoration-color:	#adbdb4;	
 }
 
-
-
 .main-menu a,
 .main-menu li:first-child {
 	font-size: 			16px;
@@ -38,19 +34,21 @@ img {
 	font-weight: 		700;
 	color:				white;
 }
-.main-menu li:hover {
+.main-menu li:hover,
+.user-authorization .user-basket:hover,
+.user-authorization .login:hover {
 	background-color:	white;
 	border-radius:		20px;
 }
-.main-menu li:hover a {	 /*вложенность три.. классы на li? nth-child?*/
+.main-menu li:hover a,  /*вложенность три.. классы на li? nth-child?*/
+.user-authorization .user-basket:hover,
+.user-authorization .login:hover {
 	color:				black;
 	text-decoration:	none;
 }
 .main-menu li:active {
 	box-shadow: 		inset 0 0 5 #696969;
 }
-
-
 
 .sub-menu a:hover {
 	background-color: 	#fbded7;
@@ -69,9 +67,6 @@ img {
 	overflow: 		hidden;
 }
 
-
-
-
 .sub-menu {
 	flex-direction: 	column;
 	position: 			absolute;
@@ -81,8 +76,6 @@ img {
 	box-shadow:			0 20px 20px 0 rgba(0,0,0,.4);
 	border-radius:		5px;
 }
-
-
 .sub-menu .sub-new {
 	font-size:			14px;
 	line-height:		1.142;
@@ -93,9 +86,6 @@ img {
 	line-height:		1.142;
 	font-weight:		400;
 }
-
-
-
 .sub-menu a {
 	display:			block;
 	color:				#323232;
@@ -111,54 +101,86 @@ img {
 .sub-menu a:active {
 	background-color:	#f6b5a5;
 }
-
-
-	/* форма  ВХОДА */
+.user-authorization > form {
+	position:			absolute;
+	top: 				120px;
+	left: 				40%;
+	width: 				341px;
+	height:				84px;
+	border-radius:		5px;
+	background-color: 	#f8f7f4;
+	padding:			20px 15px;
+	box-shadow: 		0 20px 20px rgba(0, 0, 0, 0.4);
+}
+.user-authorization input[type="text"] {
+	width: 				311px;
+	height: 			44px;
+	border: 			1px solid rgba(178, 178, 178, 0.52);
+	background-color: 	#ffffff;
+	border-radius:		5px;
+	padding-left:		15px;
+}
 
 .modal {
 	position:			absolute;
 	background-color:	#f8f7f4;
-	box-shadow: 		0 30px 50px rgba(0, 0, 0, 0.7);
-}
-.modal-login {	
-	top: 			120px;
-	left: 			40%;
-	width: 			278px;
-
-	margin-left: 	230px;
-	padding: 		20px 18px;
-}
-
-.login-form {
-	border-radius:	25px;  /*не работает*/
-}
-
-.login-form input[type="email"],
-.login-form input[type="password"] {
-	box-sizing: 		border-box;
-	wi1dth: 				278px;
-	padding: 			10px 15px;
-	padding-right:		40px;
+	box-shadow: 		0 20px 20px rgba(0, 0, 0, 0.4);
+	top: 				120px;
+	left: 				50%;
+	width: 				277px;
+	height: 			214px;
+	margin-left: 		230px;
+	padding: 			20px 18px;	/*в макет не попадаю*/
 	border-radius:		5px;
 }
-.login-form input:hover {
-	border-color: 		#9a9a9a;
+.modal-login input[type="email"],
+.modal-login input[type="password"] {
+	width: 				241px;
+	height: 			44px;
+	padding: 			10px 15px;
+	padding-right:		40px;
+	border: 			1px solid #d3d3d2;
+	background-color: 	#ffffff;
+	border-radius:		5px;	
 }
-.login-form input:focus {
-	border-color: 		#2e88e4;
+.modal input[type="submit"] {
+	min-width: 			100px;
+	height: 			44px;
+	margin-right:		20px;
+	border-radius:		20px;
+	box-shadow: 		0 1px 2px #ac1000;
+	background-color: 	#e84d37;
+	background-image: 	linear-gradient(to top, #e74a35 0%, #f26843 100%);
+	color: 				#fefefe;
+	font-family: 		Roboto;
+	font-size: 			18px;
+	font-weight: 		700;
+	line-height: 		1.333;
 }
-.login-form a:hover,
-.login-form a:focus {
-	color:				#e84d37;
+.modal a {
+	color: 					#323232;
+	font-family: 			Roboto;
+	font-size: 				13px;
+	font-weight: 			400;
+	line-height: 			1.846;
+	text-decoration:		underline;
+	text-decoration-color:	#aeadab;
 }
 
-
-/* .modal-login   278px */
-
-	/*  конец  */
-
-
-	
+.user-authorization input[type="text"]:hover,
+.modal-login input:hover,
+.map-modal input[type="text"]:hover,
+.map-modal input[type="email"]:hover, 
+.map-modal textarea:hover {
+	border: 			2px solid rgba(154, 154, 154, 0.52); 
+}
+.user-authorization input[type="text"]:focus,
+.modal-login input:focus,
+.map-modal input[type="text"]:focus,
+.map-modal input[type="email"]:focus, 
+.map-modal textarea:focus {
+	border: 			2px solid rgba(46, 136, 228, 0.52);
+}
 	
 .user-block .login {
 	margin-right:		10px;
@@ -177,8 +199,8 @@ img {
 }
 .user-block .login,
 .user-block .user-basket {
-	position: 			relative;
-	padding-left:		33px;
+	position: 				relative;
+	padding-left:			33px;
 }
 .login::before {
 	content: 				"";
@@ -326,6 +348,91 @@ img {
 	color:				white;
 	border:				0;
 }
+
+.map-modal {
+	position:			fixed;
+	top:				340px;
+	left:				35%;
+	width: 				478px;
+	height: 			443px;
+	padding:			20px 24px;
+	background-color: 	#f8f7f4;
+	border-radius:		10px;
+	color:				#323232;
+	font-family: 		Roboto;
+	font-size: 			24px;
+	font-weight: 		500;
+	line-height: 		1.166;
+}
+.map-modal input[type="text"] {
+	margin-top:			24px;
+}
+.map-modal input[type="text"],
+.map-modal input[type="email"] {
+	margin-bottom:		20px;
+	border-radius:		5px;
+	width: 				267px;
+	height: 			44px;
+	border: 			1px solid rgba(178, 178, 178, 0.52);
+	padding:			16px 15px;
+	background-color: 	#ffffff;
+	color: 				#999999;
+	font-family:		Roboto;
+	font-size: 			16px;
+	font-weight: 		400;
+	line-height: 		1.5;
+}
+.map-modal textarea {
+	margin-bottom:		25px;
+	color: 				#999999;
+	font-family:		Roboto;
+	font-size: 			16px;
+	font-weight: 		400;
+	line-height: 		1.5;
+	padding:			13px 15px;
+	border-radius:		5px;
+}
+.map-modal input[type="submit"] {
+	min-width: 			139px;
+	min-height: 		44px;
+	box-shadow: 		0 2px 2px rgba(172, 16, 0, 0.64);
+	background-color: 	#e84d37;
+	color: 				#fefefe;
+	background-image: 	linear-gradient(to top, #e74a35 0%, #f26843 100%);
+	border-radius:		20px;
+	font-family: 		Roboto;
+	font-size: 			18px;
+	font-weight: 		700;
+	line-height: 		1.333;
+}
+.map-close {
+	position: 			absolute;
+	top: 				16px;
+	right: 				17px;
+	width: 				18px;
+	height: 			17px;
+	font-size: 			0;
+	background-color: 	transparent;
+	border: 			0;
+	cursor: 			pointer;
+}
+.map-close::before,
+.map-close::after {
+	content: 			"";
+	position: 			absolute;
+	top: 				16px;
+	left:				0px;
+	width: 				18px;
+	height: 			2px;
+	background-color: 	black;
+}
+.map-close::before {
+	transform: 			rotate(45deg);
+}
+.map-close::after {
+	transform: 			rotate(-45deg);
+}
+
 .footer-social ul,
 .footer-info ul {
 	margin:				0;
@@ -391,7 +498,7 @@ html {
 	flex-wrap: 			wrap;
 }
 .features-list li {
-	width: 49%;
+	width: 				49%;
 }
 .user-blog {
 	display:			flex;
